tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/legacy-dynamic-array-type.wyst
module syntax.legacy_dynamic_array

fn rejected() {
  var values: [dynamic]u8 = 0
}
